--- a/src/tautable/Panel1.form
+++ b/src/tautable/Panel1.form
@@ -123,7 +123,7 @@
               <Font name="Arial Rounded MT Bold" size="14" style="1"/>
             </Property>
             <Property name="foreground" type="java.awt.Color" editor="org.netbeans.beaninfo.editors.ColorEditor">
-              <Color blue="34" green="c5" red="98" type="rgb"/>
+              <Color blue="34" green="9d" red="34" type="rgb"/>
             </Property>
             <Property name="text" type="java.lang.String" value="TauTable"/>
             <Property name="toolTipText" type="java.lang.String" value=""/>
@@ -157,6 +157,9 @@
       <Properties>
         <Property name="border" type="javax.swing.border.Border" editor="org.netbeans.modules.form.editors2.BorderEditor">
           <Border info="null"/>
+        </Property>
+        <Property name="foreground" type="java.awt.Color" editor="org.netbeans.beaninfo.editors.ColorEditor">
+          <Color blue="f" green="f" red="f" type="rgb"/>
         </Property>
         <Property name="text" type="java.lang.String" value="Generate"/>
         <Property name="color" type="java.awt.Color" editor="org.netbeans.beaninfo.editors.ColorEditor">
