--- a/src/tautable/Panel3.form
+++ b/src/tautable/Panel3.form
@@ -23,7 +23,7 @@
                   <Component id="jButton2" max="32767" attributes="0"/>
               </Group>
               <EmptySpace max="-2" attributes="0"/>
-              <Component id="jScrollPane3" min="-2" pref="332" max="-2" attributes="0"/>
+              <Component id="jScrollPane3" pref="332" max="32767" attributes="0"/>
               <EmptySpace max="32767" attributes="0"/>
           </Group>
       </Group>
